[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/ui/pieces/recv_Popup.gd" type="Script" id=1]
[ext_resource path="res://pieces/content_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://pieces/_lineedit_bg.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.968627, 0.105882, 0.635294, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.0862745 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_detail = 20

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/JosefinSans-Bold.ttf"

[sub_resource type="DynamicFont" id=4]
size = 18
use_mipmaps = true
use_filter = true
font_data = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.0862745 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.972549, 0.356863, 0.737255, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=7]
content_margin_top = 5.0
bg_color = Color( 0.96875, 0.261108, 0.698825, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.968627, 0.243137, 0.690196, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="DynamicFontData" id=9]
font_path = "res://fonts/Roboto-Medium.ttf"

[sub_resource type="DynamicFont" id=10]
size = 18
use_mipmaps = true
use_filter = true
font_data = SubResource( 9 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://fonts/Roboto-Medium.ttf"

[sub_resource type="DynamicFont" id=12]
use_mipmaps = true
use_filter = true
font_data = SubResource( 11 )

[sub_resource type="DynamicFontData" id=13]
font_path = "res://fonts/Roboto-Medium.ttf"

[sub_resource type="DynamicFont" id=14]
size = 14
use_mipmaps = true
use_filter = true
font_data = SubResource( 13 )

[node name="recv_Popup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -376.0
margin_top = -66.0
margin_right = 377.0
margin_bottom = 81.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Panel"]
anchor_right = 1.0
margin_bottom = 27.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="Panel/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.0
margin_top = -7.5
margin_right = 117.0
margin_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 4 )
text = "Enter Receiver Information"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shadow" type="Panel" parent="Panel"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = 6.0
margin_bottom = 6.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -102.0
margin_top = -37.0
margin_right = 102.0
margin_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yes_button" parent="Panel/HBoxContainer" instance=ExtResource( 2 )]
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 10 )
text = "Confirm"
my_url = "true"

[node name="no_button" parent="Panel/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 110.0
margin_right = 210.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 10 )
text = "Cancel"
my_url = "false"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -322.0
margin_top = -33.5
margin_right = 322.0
margin_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 8
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 1.0
margin_right = 644.0
margin_bottom = 24.0
custom_constants/separation = 10
alignment = 1

[node name="response_text" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
margin_top = 2.0
margin_right = 64.0
margin_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Address:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="address_line" parent="Panel/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 74.0
margin_right = 644.0
margin_bottom = 23.0
rect_min_size = Vector2( 570, 0 )
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
max_length = 64
expand_to_text_length = true

[node name="HBoxContainer4" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 32.0
margin_right = 644.0
margin_bottom = 55.0
alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer4"]
margin_left = 166.0
margin_right = 327.0
margin_bottom = 23.0
custom_constants/separation = 10
alignment = 1

[node name="response_text" type="Label" parent="Panel/VBoxContainer/HBoxContainer4/HBoxContainer3"]
margin_top = 2.0
margin_right = 61.0
margin_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Amount:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="comb_line" parent="Panel/VBoxContainer/HBoxContainer4/HBoxContainer3" instance=ExtResource( 3 )]
margin_left = 71.0
margin_right = 161.0
margin_bottom = 23.0
rect_min_size = Vector2( 90, 0 )
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
max_length = 8
expand_to_text_length = true
placeholder_text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer4"]
margin_left = 331.0
margin_right = 429.0
margin_bottom = 23.0
alignment = 1

[node name="response_text" type="Label" parent="Panel/VBoxContainer/HBoxContainer4/HBoxContainer2"]
margin_top = 2.0
margin_right = 4.0
margin_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nats_line" parent="Panel/VBoxContainer/HBoxContainer4/HBoxContainer2" instance=ExtResource( 3 )]
margin_left = 8.0
margin_right = 98.0
margin_bottom = 23.0
rect_min_size = Vector2( 90, 0 )
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
max_length = 8
placeholder_text = "00000000"

[node name="response_text2" type="Label" parent="Panel/VBoxContainer/HBoxContainer4"]
margin_left = 433.0
margin_top = 2.0
margin_right = 478.0
margin_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "COMB"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="menu_button_pressed" from="Panel/HBoxContainer/yes_button" to="." method="_on_yes_button_menu_button_pressed"]
[connection signal="menu_button_pressed" from="Panel/HBoxContainer/no_button" to="." method="_on_no_button_menu_button_pressed"]
